--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	  <script src="assets/OrbitControls.js"></script>
 		<script src="assets/OBJLoader.js"></script>
 		<script src="assets/MTLLoader.js"></script>
-		<script src="index.js"></script>
+		<script type="module" src="index.js"></script>
 	</body>
 </html>
