--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script>
 	  <script src="assets/OrbitControls.js"></script>
+		<script src="assets/GLTFLoader.js"></script>
 		<script src="assets/OBJLoader.js"></script>
 		<script src="assets/MTLLoader.js"></script>
 		<script type="module" src="index.js"></script>
