--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		</style>
 	</head>
 	<body>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script>
+	  <script src="assets/three.min.js"></script>
 	  <script src="assets/OrbitControls.js"></script>
 		<script src="assets/GLTFLoader.js"></script>
 		<script src="assets/OBJLoader.js"></script>
